g5-progetto-settimanale-mobile

--- a/m1/s1/g4/esercizio-pomeridiano-v2/index.html
+++ b/m1/s1/g4/esercizio-pomeridiano-v2/index.html
@@ -160,14 +160,14 @@
                 id="email"
                 type="email"
                 name="email"
-                placeholder="Inserisci il tuo indirizzo email"
-              />
-              <input
-                id="iscriviti"
-                type="submit"
-                name="Iscriviti"
-                value="Iscriviti!"
-              />
+                placeholder="Inserisci il tuo indirizzo email"/>
+              <form action=""></form>  
+              <button type="submit" 
+              id="iscriviti"
+              name="Iscriviti"
+              value="Iscriviti!">
+                Iscriviti!
+              </button>
             </form>
           </div>
         </section>
