appunti-lezione-aggiornati-m1-s2-g4

--- a/m1/s2/g4/selettori.html
+++ b/m1/s2/g4/selettori.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+   
     <div id="test">Hello World!</div>
     <div class="elemento"></div>
     <div class="elemento"></div>
@@ -16,7 +16,7 @@
     <div class="elemento"></div>
    
     <script>
-
+/*
         let test = document.getElementById("test");//un solo elemento
         console.dir(test.textContent);
         
@@ -31,7 +31,35 @@
 
         for(let elemento of elementi){
             elemento.textContent = 'ciao';
-        }
+        } */
+
+        {
+
+let test = document.getElementById("test");//un solo elemento
+console.dir(test)
+
+console.log(test.innerHTML)//lettura
+
+test.innerHTML = 'Ciao Mondo!'
+test.style.color = 'red';
+
+
+let elementi = document.getElementsByClassName('elemento')//lista di elementi
+//non posso ciclarlo con foreach
+
+let divs = document.getElementsByTagName('div');//lista di elementi
+console.log(divs)
+
+for(let d of divs){
+    d.innerHTML = 'Ciao';
+    d.style.backgroundColor = 'yellow';
+}
+/* oppure con un for
+for(let i = 0; i < divs.length; i++){
+    divs[i].innerHTML = 'Ciao';
+}
+*/
+}
 
 
     </script>
