--- a/m1/s2/g4/for.html
+++ b/m1/s2/g4/for.html
@@ -55,7 +55,10 @@
 
         for(let prop in margherita){
             document.write(`<div>${prop} : ${margherita[prop]}</div>`)
+            console.log(prop);
         }
+
+        
 
         //margherita[prop] indica il valore della proprietà
 
