correzione-collegamento-script-errato

--- a/m1/s2/g5/progetto-settimanale/calcolatrice.html
+++ b/m1/s2/g5/progetto-settimanale/calcolatrice.html
@@ -55,6 +55,6 @@
         <button id="uguale" onclick="totale()">=</button>
       </div>     
     </div>
-    <script src="js/Calcolatrice.js"></script>
+    <script src="js/calcolatrice.js"></script>
   </body>
 </html>
