--- a/m1/s2/g5/progetto-settimanale/calcolatrice.html
+++ b/m1/s2/g5/progetto-settimanale/calcolatrice.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Calcolatrice - Made with &hearts; by Vittorio</title>
+    <title>Calcolatrice - Made with &hearts; by me</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <div id="domanda">
       <h1>La calcolatrice di Vittorio</h1>
-        <p>L'uso della calcolatrice rende pigri e riduce le capacità logiche, pertanto, prima di utilizzarla, esercitati a risolvere mentalmente il seguente calcolo:</p>
+        <p>L'uso della calcolatrice rende pigri e riduce le capacità logiche, pertanto, prima di poterla utilizzare, dovrai dimostrare di saper risolvere mentalmente il seguente calcolo:</p>
           <span>
             Quanto fa <strong>124x72 - 72x124</strong> ?
           </span>
